--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
     </a>
   </section>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
   <script>
     new Masonry('body', {
       itemSelector: '.item',
